--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,8 @@ copyright: 'RocketMod is licensed under <a href="https://creativecommons.org/lic
 docs_dir: 'content'
 repo_name: 'RocketMod/Rocket'
 repo_url: 'https://github.com/RocketMod/Rocket'
-edit_uri: 'https://github.com/RocketMod/Rocket.Documentation/edit/master/content/'
-pages:
+edit_uri: 'https://github.com/RestoreMonarchyCommunity/Rocket.Documentation/edit/master/content/'
+nav:
     - Home: index.md
     - User Guide:
         - Installation:
