--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-mkdocs==0.17.3
-mkdocs-material==2.7.3
-Pygments==2.2.0
-pymdown-extensions==4.10.1
+mkdocs>=1
+mkdocs-minify-plugin>=0.2
+Pygments>=2.2
+markdown<3.2
+pymdown-extensions>=6.2,<6.3
