--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,11 +22,11 @@ nav:
         - Getting Started:
             - Making your first plugin: development-guide/getting-started/making-your-first-plugin.md
             - Commands: development-guide/getting-started/commands.md
-            - Scheduling: development-guide/getting-started/scheduling.md
-            - Eventing: development-guide/getting-started/eventing.md
-            - Logging: development-guide/getting-started/logging.md
-            - Configurations: development-guide/getting-started/configurations.md
-            - Permissions: development-guide/getting-started/permissions.md
+            # - Scheduling: development-guide/getting-started/scheduling.md
+            # - Eventing: development-guide/getting-started/eventing.md
+            # - Logging: development-guide/getting-started/logging.md
+            # - Configurations: development-guide/getting-started/configurations.md
+            # - Permissions: development-guide/getting-started/permissions.md
 #            - Database: development-guide/getting-started/database.md
         - Misc:
             - Migration Guide: development-guide/misc/migration-guide.md
